# dvmn-fastapi

./: .gitignore  CONTRIBUTING.md  README.md  example.env  pyproject.toml
src/: env_settings.py  gotenberg_service.py  main.py  minio_service.py  page_generator.py
src/models/: sites_models.py  user_models.py
src/routers/: sites_router.py  user_router.py
