[project]
name = "FastApi-Devman-Project"
version = "0.1.0"
description = "FastApi Test Project from Devmand."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aioboto3>=15.1.0",
    "aiohttp>=3.12.15",
    "anyio>=4.9.0",
    "editorconfig-checker==3.2.1",
    "fastapi[standard]==0.115.12",
    "html-page-generator",
    "pre-commit>=4.3.0",
    "pydantic-settings>=2.10.1",
    "ruff==0.11.13",
]

[tool.uv.sources]
html-page-generator = { git = "https://github.com/devmanorg/html-page-generator.git" }
